--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "url": "https://github.com/DEVTomatoCake/tk-docs"
   },
   "dependencies": {
-    "@npmcorp/marky-markdown": "^12.0.3"
+    "showdown": "^2.1.0"
   }
 }
