--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: "npm"
 
       - name: "🛸 install eslint html plugins"
         run: npm i eslint-plugin-html @html-eslint/parser @html-eslint/eslint-plugin
