--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "build-tk-docs",
+  "name": "tk-docs",
   "version": "1.0.0",
-  "homepage": "https://tomatenkuchen.eu/docs",
+  "homepage": "https://help.tomatenkuchen.eu/",
   "repository": {
     "type": "git",
     "url": "https://github.com/DEVTomatoCake/tk-docs"
   },
   "dependencies": {
     "showdown": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.33.0",
+    "eslint-plugin-html": "^7.1.0",
+    "@html-eslint/parser": "^0.16.0",
+    "@html-eslint/eslint-plugin": "^0.16.0"
   }
 }
