--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
     "type": "git",
     "url": "https://github.com/DEVTomatoCake/tk-docs"
   },
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
+    "next": "latest",
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
