i finished my exam after 10m (90m planned) so guess what i do

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tk-docs",
   "version": "1.0.0",
-  "homepage": "https://help.tomatenkuchen.eu/",
+  "homepage": "https://docs.tomatenkuchen.eu/",
   "repository": {
     "type": "git",
     "url": "https://github.com/DEVTomatoCake/tk-docs"
