--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# dependencies
+# Dependencies
 /node_modules
 
-# next.js
-/.next/
-/out/
-
-# production
+# Production
 /build
+
+# Generated files
+.docusaurus
+.cache-loader
