--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
   "name": "tk-docs",
   "version": "1.0.0",
-  "homepage": "https://docs.tomatenkuchen.eu/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DEVTomatoCake/tk-docs"
-  },
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "docusaurus": "docusaurus",
+    "start": "docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "docusaurus deploy",
+    "clear": "docusaurus clear",
+    "serve": "docusaurus serve",
+    "write-translations": "docusaurus write-translations",
+    "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "next": "latest",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "showdown": "^2.1.0"
+    "@cmfcmf/docusaurus-search-local": "^1.1.0",
+    "@docusaurus/core": "2.4.0",
+    "@docusaurus/preset-classic": "2.4.0",
+    "@mdx-js/react": "^1.6.22",
+    "clsx": "^1.2.1",
+    "plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
+    "prism-react-renderer": "^1.3.5"
   },
   "devDependencies": {
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1"
+    "@docusaurus/module-type-aliases": "2.4.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "engines": {
+    "node": ">=16.14"
   }
 }
