--- a/static/manifest.json
+++ b/static/manifest.json
@@ -5,7 +5,7 @@
 	"id": "/?source=pwa",
 	"start_url": "/?source=pwa",
 	"background_color": "#ED8721",
-	"display_override": ["window-control-overlay", "minimal-ui"],
+	"display_override": ["window-control-overlay"],
 	"display": "standalone",
 	"scope": "/",
 	"theme_color": "#ED8721",
