--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-pagemove": "github:usagrada/docusaurus-plugin-pagemove",
+    "docusaurus-plugin-remote-content": "^3.1.0",
     "plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
     "prism-react-renderer": "^1.3.5"
   },
