--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "clsx": "^2.0.0",
     "docusaurus-plugin-pagemove": "github:usagrada/docusaurus-plugin-pagemove",
     "docusaurus-plugin-remote-content": "^3.1.0",
-    "plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
     "prism-react-renderer": "^1.3.5"
   },
   "devDependencies": {
@@ -30,16 +29,15 @@
   },
   "browserslist": {
     "production": [
-      ">0.5%",
+      ">0.8%",
       "not dead"
     ],
     "development": [
       "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 firefox version"
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.0"
   }
 }
