--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
   },
   "dependencies": {
     "@cmfcmf/docusaurus-search-local": "^1.1.0",
-    "@docusaurus/core": "^2.4.3",
-    "@docusaurus/plugin-pwa": "^2.4.3",
-    "@docusaurus/preset-classic": "^2.4.3",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "^3.0.0-rc.0",
+    "@docusaurus/plugin-pwa": "^3.0.0-rc.0",
+    "@docusaurus/preset-classic": "^3.0.0-rc.0",
+    "@mdx-js/react": "^2.3.0",
     "clsx": "^2.0.0",
     "docusaurus-plugin-pagemove": "github:usagrada/docusaurus-plugin-pagemove",
     "docusaurus-plugin-remote-content": "^3.1.0",
-    "prism-react-renderer": "^1.3.5"
+    "prism-react-renderer": "^2.1.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.3"
+    "@docusaurus/module-type-aliases": "^3.0.0-rc.0"
   },
   "browserslist": {
     "production": [
