--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.0.0-rc.0"
   },
+  "overrides": {
+    "@cmfcmf/docusaurus-search-local": {
+      "@docusaurus/core": "^3.0.0-rc.0"
+    },
+    "docusaurus-plugin-remote-content": {
+      "@docusaurus/core": "^3.0.0-rc.0"
+    }
+  },
   "browserslist": {
     "production": [
       ">1%",
@@ -34,7 +42,8 @@
     ],
     "development": [
       "last 1 chrome version",
-      "last 1 firefox version"
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   },
   "engines": {
