--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@docusaurus/preset-classic": "^3.0.0-rc.0",
     "@mdx-js/react": "^2.3.0",
     "clsx": "^2.0.0",
-    "docusaurus-plugin-pagemove": "github:usagrada/docusaurus-plugin-pagemove",
     "docusaurus-plugin-remote-content": "^3.1.0",
     "prism-react-renderer": "^2.1.0"
   },
@@ -42,8 +41,7 @@
     ],
     "development": [
       "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 firefox version"
     ]
   },
   "engines": {
