--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   },
   "overrides": {
     "@cmfcmf/docusaurus-search-local": {
-      "@docusaurus/core": "^3.0.0-rc.1"
+      "@docusaurus/core": "^3.0.0"
     },
     "docusaurus-plugin-remote-content": {
-      "@docusaurus/core": "^3.0.0-rc.1"
+      "@docusaurus/core": "^3.0.0"
     }
   },
   "browserslist": {
