--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "deploy": "docusaurus deploy"
   },
   "dependencies": {
     "@cmfcmf/docusaurus-search-local": "^1.1.0",
@@ -20,7 +16,6 @@
     "@docusaurus/preset-classic": "^3.0.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
-    "docusaurus-plugin-remote-content": "^4.0.0",
     "prism-react-renderer": "^2.3.1"
   },
   "devDependencies": {
@@ -42,6 +37,6 @@
     ]
   },
   "engines": {
-    "node": ">=18.0"
+    "node": ">=20.0"
   }
 }
