--- a/package.json
+++ b/package.json
@@ -7,24 +7,19 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy"
+    "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@cmfcmf/docusaurus-search-local": "^1.1.0",
     "@docusaurus/core": "^3.0.0",
     "@docusaurus/plugin-pwa": "^3.1.0",
     "@docusaurus/preset-classic": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.1.0",
+    "docusaurus-lunr-search": "^3.3.2",
     "prism-react-renderer": "^2.3.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.0.0"
-  },
-  "overrides": {
-    "@cmfcmf/docusaurus-search-local": {
-      "@docusaurus/core": "^3.0.0"
-    }
   },
   "browserslist": {
     "production": [
