--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "postinstall": "patch-package",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "serve": "docusaurus serve"
+    "serve": "docusaurus serve",
+    "write-translations": "docusaurus write-translations ./ --locale=de"
   },
   "dependencies": {
     "@docusaurus/core": "^3.0.0",
@@ -16,6 +18,7 @@
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.1.0",
     "docusaurus-lunr-search": "^3.3.2",
+    "patch-package": "^8.0.0",
     "prism-react-renderer": "^2.3.1"
   },
   "devDependencies": {
