--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "postinstall": "patch-package",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
+    "start-de": "docusaurus start --locale=de",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "serve": "docusaurus serve",
