--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,8 +2,8 @@
 	"short_name": "TomatenKuchen Docs",
 	"name": "TomatenKuchen Docs - Multipurpose Discord bot",
 	"description": "Documentation of the TomatenKuchen Discord bot",
-	"id": "/?source=pwa",
-	"start_url": "/?source=pwa",
+	"id": "/",
+	"start_url": "/",
 	"background_color": "#ED8721",
 	"display_override": ["window-control-overlay"],
 	"display": "standalone",
@@ -16,37 +16,44 @@
 			"sizes": "128x128",
 			"purpose": "maskable"
 		},{
-			"src": "img/icon-72x72.png",
+			"src": "icon/72x72.png",
 			"sizes": "72x72",
 			"type": "image/png"
 		},{
-			"src": "img/icon-96x96.png",
+			"src": "icon/96x96.png",
 			"sizes": "96x96",
 			"type": "image/png"
 		},{
-			"src": "img/icon-128x128.png",
+			"src": "icon/128x128.png",
 			"sizes": "128x128",
 			"type": "image/png"
 		},{
-			"src": "img/icon-144x144.png",
+			"src": "icon/144x144.png",
 			"sizes": "144x144",
 			"type": "image/png"
 		},{
-			"src": "img/icon-152x152.png",
+			"src": "icon/152x152.png",
 			"sizes": "152x152",
 			"type": "image/png"
 		},{
-			"src": "img/icon-192x192.png",
+			"src": "icon/192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},{
-			"src": "img/icon-384x384.png",
+			"src": "icon/384x384.png",
 			"sizes": "384x384",
 			"type": "image/png"
 		},{
-			"src": "img/icon-512x512.png",
+			"src": "icon/512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
+		}
+	],
+	"screenshots": [
+		{
+			"src": "img/starboard.webp",
+			"type": "image/webp",
+			"sizes": "438x392"
 		}
 	]
 }
